--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-http-backend": "^2.5.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-image-crop": "^11.0.5",
