--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "tinymce": "^7.0.0",
+    "turndown": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
